[gd_scene load_steps=10 format=3 uid="uid://dbsqdqkgmr670"]

[ext_resource type="Script" path="res://scripts/wormhole_overlay.gd" id="1_8klqr"]
[ext_resource type="Shader" path="res://scripts/shaders/WormholeOverlay.gdshader" id="1_h67mp"]
[ext_resource type="Shader" path="res://scripts/shaders/WormholeColourShader.gdshader" id="3_17rgn"]
[ext_resource type="AudioStream" uid="uid://r3x32q3qy5xq" path="res://assets/sounds/Wormhole Animation.mp3" id="4_5b71n"]

[sub_resource type="Gradient" id="Gradient_blg5l"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5wgbq"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2nuin"]
color_ramp = SubResource("Gradient_blg5l")
noise = SubResource("FastNoiseLite_5wgbq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tlmsi"]
shader = ExtResource("1_h67mp")
shader_parameter/frequency = 4.0
shader_parameter/amplitude = 2.0
shader_parameter/ripple_rate = 5.0
shader_parameter/wave_amplitude = 0.05
shader_parameter/wave_frequency = 4.0
shader_parameter/noise = SubResource("NoiseTexture2D_2nuin")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_foyda"]
shader = ExtResource("3_17rgn")

[node name="WormholeOverlay" type="Control"]
custom_minimum_size = Vector2(2560, 1440)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8klqr")

[node name="WormholeWarpingEffect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_tlmsi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.309804, 0.309804, 0.309804, 0)

[node name="WormholeEffect" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WormholeColourEffect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_foyda")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.168627)

[node name="WormholeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5b71n")
volume_db = -6.0
bus = &"SFX"
parameters/looping = false

[connection signal="timeout" from="WormholeEffect" to="." method="overlay_complete"]
